--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -1,7 +1,7 @@
 name: Deploy PR Environment
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
   workflow_dispatch:
 jobs:
   deploy:
